// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountScreenTemplate renders correctly with en-US locale 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            [
              {
                "maxHeight": 650,
                "maxWidth": 650,
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flexDirection": "column",
              "maxWidth": 650,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "rgba(231, 224, 236, 1)",
                  "borderTopLeftRadius": 2,
                  "borderTopRightRadius": 2,
                },
                {
                  "fontFamily": "calibre_app_regular",
                  "marginBottom": 16,
                  "marginRight": undefined,
                  "width": 600,
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#ffffff",
                  "bottom": 0,
                  "height": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "transform": [
                    {
                      "scaleY": 0.5,
                    },
                  ],
                  "zIndex": 1,
                }
              }
              testID="text-input-underline"
            />
            <View
              onLayout={[Function]}
              style={
                [
                  {
                    "flexGrow": 1,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  },
                  {
                    "minHeight": 56,
                  },
                ]
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "overflow": "hidden",
                    },
                    {
                      "zIndex": 3,
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  pointerEvents="none"
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "transform": [
                        {
                          "translateX": 0,
                        },
                      ],
                      "width": 750,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "width": 73,
                      }
                    }
                  >
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      onLayout={[Function]}
                      onTextLayout={[Function]}
                      style={
                        {
                          "color": "#00ffe6",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": -12,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-active"
                    >
                      FIRST NAME
                    </Text>
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      style={
                        {
                          "color": "rgba(73, 69, 79, 1)",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": -12,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-inactive"
                    >
                      FIRST NAME
                    </Text>
                  </View>
                </View>
              </View>
              <TextInput
                cursorColor="#00ffe6"
                editable={true}
                maxFontSizeMultiplier={1.5}
                multiline={false}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="transparent"
                selectionColor="#ffffff"
                style={
                  [
                    {
                      "flexGrow": 1,
                      "margin": 0,
                    },
                    {},
                    {
                      "paddingBottom": 4,
                      "paddingTop": 24,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": undefined,
                      "letterSpacing": 0.15,
                      "lineHeight": undefined,
                      "minWidth": 65,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "textAlign": "left",
                      "textAlignVertical": "center",
                    },
                    undefined,
                    [
                      {},
                    ],
                    undefined,
                  ]
                }
                testID="text-input-flat"
                underlineColorAndroid="transparent"
                value="Jane"
              />
            </View>
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "rgba(231, 224, 236, 1)",
                  "borderTopLeftRadius": 2,
                  "borderTopRightRadius": 2,
                },
                {
                  "fontFamily": "calibre_app_regular",
                  "marginBottom": 16,
                  "marginLeft": undefined,
                  "width": 600,
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#ffffff",
                  "bottom": 0,
                  "height": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "transform": [
                    {
                      "scaleY": 0.5,
                    },
                  ],
                  "zIndex": 1,
                }
              }
              testID="text-input-underline"
            />
            <View
              onLayout={[Function]}
              style={
                [
                  {
                    "flexGrow": 1,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  },
                  {
                    "minHeight": 56,
                  },
                ]
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "overflow": "hidden",
                    },
                    {
                      "zIndex": 3,
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  pointerEvents="none"
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "transform": [
                        {
                          "translateX": 0,
                        },
                      ],
                      "width": 750,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "width": 73,
                      }
                    }
                  >
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      onLayout={[Function]}
                      onTextLayout={[Function]}
                      style={
                        {
                          "color": "#00ffe6",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": -12,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-active"
                    >
                      LAST NAME
                    </Text>
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      style={
                        {
                          "color": "rgba(73, 69, 79, 1)",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": -12,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-inactive"
                    >
                      LAST NAME
                    </Text>
                  </View>
                </View>
              </View>
              <TextInput
                cursorColor="#00ffe6"
                editable={true}
                maxFontSizeMultiplier={1.5}
                multiline={false}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="transparent"
                selectionColor="#ffffff"
                style={
                  [
                    {
                      "flexGrow": 1,
                      "margin": 0,
                    },
                    {},
                    {
                      "paddingBottom": 4,
                      "paddingTop": 24,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": undefined,
                      "letterSpacing": 0.15,
                      "lineHeight": undefined,
                      "minWidth": 65,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "textAlign": "left",
                      "textAlignVertical": "center",
                    },
                    undefined,
                    [
                      {},
                    ],
                    undefined,
                  ]
                }
                testID="text-input-flat"
                underlineColorAndroid="transparent"
                value="Doe"
              />
            </View>
          </View>
        </View>
        <View
          style={
            {
              "flexDirection": "column",
              "maxWidth": 650,
            }
          }
        >
          <RNGestureHandlerButton
            collapsable={false}
            delayLongPress={600}
            enabled={true}
            exclusive={true}
            handlerTag={1}
            handlerType="NativeViewGestureHandler"
            innerRef={null}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            rippleColor="transparent"
            style={
              [
                undefined,
                {
                  "cursor": undefined,
                },
              ]
            }
            touchSoundDisabled={false}
          >
            <View
              accessible={true}
              collapsable={false}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View>
                <View
                  style={
                    [
                      {
                        "backgroundColor": "rgba(231, 224, 236, 1)",
                        "borderTopLeftRadius": 2,
                        "borderTopRightRadius": 2,
                      },
                      {
                        "fontFamily": "calibre_app_regular",
                        "marginBottom": 16,
                        "width": 600,
                      },
                    ]
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": "#ffffff",
                        "bottom": 0,
                        "height": 1,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "transform": [
                          {
                            "scaleY": 0.5,
                          },
                        ],
                        "zIndex": 1,
                      }
                    }
                    testID="text-input-underline"
                  />
                  <View
                    onLayout={[Function]}
                    style={
                      [
                        {
                          "flexGrow": 1,
                          "paddingBottom": 0,
                          "paddingTop": 0,
                        },
                        {
                          "minHeight": 56,
                        },
                      ]
                    }
                  >
                    <View
                      pointerEvents="none"
                      style={
                        [
                          {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          },
                          {
                            "overflow": "hidden",
                          },
                          {
                            "zIndex": 3,
                          },
                        ]
                      }
                    >
                      <View
                        collapsable={false}
                        pointerEvents="none"
                        style={
                          {
                            "bottom": 0,
                            "left": 0,
                            "opacity": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "transform": [
                              {
                                "translateX": 0,
                              },
                            ],
                            "width": 750,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "width": 73,
                            }
                          }
                        >
                          <Text
                            collapsable={false}
                            maxFontSizeMultiplier={1.5}
                            numberOfLines={1}
                            onLayout={[Function]}
                            onTextLayout={[Function]}
                            style={
                              {
                                "color": "#00ffe6",
                                "fontFamily": "System",
                                "fontSize": 12,
                                "fontWeight": undefined,
                                "left": 0,
                                "letterSpacing": 0.15,
                                "lineHeight": undefined,
                                "maxWidth": 73,
                                "opacity": 0,
                                "paddingLeft": 16,
                                "paddingRight": 16,
                                "position": "absolute",
                                "textAlign": "left",
                                "top": 30,
                                "transform": [
                                  {
                                    "translateX": 0,
                                  },
                                  {
                                    "translateY": -12,
                                  },
                                  {
                                    "scale": 1,
                                  },
                                ],
                                "writingDirection": "ltr",
                              }
                            }
                            testID="text-input-flat-label-active"
                          >
                            BIRTHDAY
                          </Text>
                          <Text
                            collapsable={false}
                            maxFontSizeMultiplier={1.5}
                            numberOfLines={1}
                            style={
                              {
                                "color": "rgba(73, 69, 79, 1)",
                                "fontFamily": "System",
                                "fontSize": 12,
                                "fontWeight": undefined,
                                "left": 0,
                                "letterSpacing": 0.15,
                                "lineHeight": undefined,
                                "maxWidth": 73,
                                "opacity": 0,
                                "paddingLeft": 16,
                                "paddingRight": 16,
                                "position": "absolute",
                                "textAlign": "left",
                                "top": 30,
                                "transform": [
                                  {
                                    "translateX": 0,
                                  },
                                  {
                                    "translateY": -12,
                                  },
                                  {
                                    "scale": 1,
                                  },
                                ],
                                "writingDirection": "ltr",
                              }
                            }
                            testID="text-input-flat-label-inactive"
                          >
                            BIRTHDAY
                          </Text>
                        </View>
                      </View>
                    </View>
                    <TextInput
                      cursorColor="#00ffe6"
                      editable={false}
                      maxFontSizeMultiplier={1.5}
                      multiline={false}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      placeholderTextColor="transparent"
                      selectionColor="#ffffff"
                      style={
                        [
                          {
                            "flexGrow": 1,
                            "margin": 0,
                          },
                          {},
                          {
                            "paddingBottom": 4,
                            "paddingTop": 24,
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 12,
                            "fontWeight": undefined,
                            "letterSpacing": 0.15,
                            "lineHeight": undefined,
                            "minWidth": 65,
                            "paddingLeft": 16,
                            "paddingRight": 16,
                            "textAlign": "left",
                            "textAlignVertical": "center",
                          },
                          undefined,
                          [
                            {},
                          ],
                          undefined,
                        ]
                      }
                      testID="text-input-flat"
                      underlineColorAndroid="transparent"
                      value="04,03,2026"
                    />
                  </View>
                </View>
              </View>
            </View>
          </RNGestureHandlerButton>
          <View
            style={
              {
                "alignItems": "center",
                "marginLeft": undefined,
                "maxWidth": undefined,
                "width": undefined,
              }
            }
          >
            <View
              accessibilityRole="radiogroup"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "height": 40,
                      "justifyContent": "flex-start",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  accessibilityLiveRegion="polite"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": false,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  color="rgba(98, 91, 113, 1)"
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 18,
                        "padding": 6,
                      },
                    ]
                  }
                  uncheckedColor="rgba(98, 91, 113, 1)"
                >
                  <View
                    style={
                      {
                        "opacity": 0,
                      }
                    }
                  >
                    <Text />
                  </View>
                </View>
                <Text
                  style={
                    [
                      {
                        "color": "rgba(28, 27, 31, 1)",
                      },
                      undefined,
                    ]
                  }
                >
                  Male
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "height": 40,
                      "justifyContent": "flex-start",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  accessibilityLiveRegion="polite"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": true,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  color="rgba(98, 91, 113, 1)"
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 18,
                        "padding": 6,
                      },
                    ]
                  }
                  uncheckedColor="rgba(98, 91, 113, 1)"
                >
                  <View
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text />
                  </View>
                </View>
                <Text
                  style={
                    [
                      {
                        "color": "rgba(28, 27, 31, 1)",
                      },
                      undefined,
                    ]
                  }
                >
                  Female
                </Text>
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            [
              {
                "fontFamily": "calibre_app_regular",
                "fontSize": 13,
                "marginBottom": 18,
              },
              {
                "color": "#ff4310",
              },
              undefined,
            ]
          }
        />
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#00ffe6",
              "borderRadius": 16,
              "height": 50,
              "marginBottom": 16,
              "marginTop": 16,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
              "width": 270,
            }
          }
          testID="button-container-outer-layer"
        >
          <View
            collapsable={false}
            screenWidth={400}
            style={
              {
                "backgroundColor": "#00ffe6",
                "borderColor": "transparent",
                "borderRadius": 16,
                "borderStyle": "solid",
                "borderWidth": 0,
                "flex": 1,
                "minWidth": 64,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
            testID="button-container"
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "borderRadius": 16,
                  },
                ]
              }
              testID="button"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        [
                          {
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          false,
                          {
                            "marginHorizontal": 24,
                            "marginVertical": 10,
                          },
                          undefined,
                          false,
                          {
                            "color": "rgba(255, 255, 255, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "fontFamily": "calibre_app_semibold",
                              "fontSize": 24,
                            },
                            undefined,
                          ],
                        ],
                      ],
                    ]
                  }
                  testID="button-text"
                >
                  Update
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderRadius": 10,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="button-container-outer-layer"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "transparent",
                "borderColor": "transparent",
                "borderRadius": 10,
                "borderStyle": "solid",
                "borderWidth": 0,
                "flex": undefined,
                "minWidth": 64,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
            testID="button-container"
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "borderRadius": 10,
                  },
                ]
              }
              testID="button"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    [
                      {
                        "height": 28,
                        "marginBottom": 12,
                        "marginTop": 16,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        [
                          {
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          false,
                          {
                            "marginHorizontal": 12,
                          },
                          undefined,
                          false,
                          {
                            "color": "#00ffe6",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "fontFamily": "calibre_app_semibold",
                              "fontSize": 14,
                            },
                            {
                              "color": "rgba(28, 27, 31, 1)",
                            },
                            undefined,
                          ],
                        ],
                      ],
                    ]
                  }
                  testID="button-text"
                >
                  Sign Out
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`AccountScreenTemplate renders correctly with ja-JP locale 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            [
              {
                "maxHeight": 650,
                "maxWidth": 650,
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flexDirection": "column",
              "maxWidth": 650,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "rgba(231, 224, 236, 1)",
                  "borderTopLeftRadius": 2,
                  "borderTopRightRadius": 2,
                },
                {
                  "fontFamily": "calibre_app_regular",
                  "marginBottom": 16,
                  "marginRight": undefined,
                  "width": 600,
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#ffffff",
                  "bottom": 0,
                  "height": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "transform": [
                    {
                      "scaleY": 0.5,
                    },
                  ],
                  "zIndex": 1,
                }
              }
              testID="text-input-underline"
            />
            <View
              onLayout={[Function]}
              style={
                [
                  {
                    "flexGrow": 1,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  },
                  {
                    "minHeight": 56,
                  },
                ]
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "overflow": "hidden",
                    },
                    {
                      "zIndex": 3,
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  pointerEvents="none"
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "transform": [
                        {
                          "translateX": 0,
                        },
                      ],
                      "width": 750,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "width": 73,
                      }
                    }
                  >
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      onLayout={[Function]}
                      onTextLayout={[Function]}
                      style={
                        {
                          "color": "#00ffe6",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": -12,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-active"
                    >
                      名
                    </Text>
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      style={
                        {
                          "color": "rgba(73, 69, 79, 1)",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": -12,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-inactive"
                    >
                      名
                    </Text>
                  </View>
                </View>
              </View>
              <TextInput
                cursorColor="#00ffe6"
                editable={true}
                maxFontSizeMultiplier={1.5}
                multiline={false}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="transparent"
                selectionColor="#ffffff"
                style={
                  [
                    {
                      "flexGrow": 1,
                      "margin": 0,
                    },
                    {},
                    {
                      "paddingBottom": 4,
                      "paddingTop": 24,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": undefined,
                      "letterSpacing": 0.15,
                      "lineHeight": undefined,
                      "minWidth": 65,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "textAlign": "left",
                      "textAlignVertical": "center",
                    },
                    undefined,
                    [
                      {},
                    ],
                    undefined,
                  ]
                }
                testID="text-input-flat"
                underlineColorAndroid="transparent"
                value="Jane"
              />
            </View>
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "rgba(231, 224, 236, 1)",
                  "borderTopLeftRadius": 2,
                  "borderTopRightRadius": 2,
                },
                {
                  "fontFamily": "calibre_app_regular",
                  "marginBottom": 16,
                  "marginLeft": undefined,
                  "width": 600,
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#ffffff",
                  "bottom": 0,
                  "height": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "transform": [
                    {
                      "scaleY": 0.5,
                    },
                  ],
                  "zIndex": 1,
                }
              }
              testID="text-input-underline"
            />
            <View
              onLayout={[Function]}
              style={
                [
                  {
                    "flexGrow": 1,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  },
                  {
                    "minHeight": 56,
                  },
                ]
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "overflow": "hidden",
                    },
                    {
                      "zIndex": 3,
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  pointerEvents="none"
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "transform": [
                        {
                          "translateX": 0,
                        },
                      ],
                      "width": 750,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "width": 73,
                      }
                    }
                  >
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      onLayout={[Function]}
                      onTextLayout={[Function]}
                      style={
                        {
                          "color": "#00ffe6",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": -12,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-active"
                    >
                      姓
                    </Text>
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      style={
                        {
                          "color": "rgba(73, 69, 79, 1)",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": -12,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-inactive"
                    >
                      姓
                    </Text>
                  </View>
                </View>
              </View>
              <TextInput
                cursorColor="#00ffe6"
                editable={true}
                maxFontSizeMultiplier={1.5}
                multiline={false}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="transparent"
                selectionColor="#ffffff"
                style={
                  [
                    {
                      "flexGrow": 1,
                      "margin": 0,
                    },
                    {},
                    {
                      "paddingBottom": 4,
                      "paddingTop": 24,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": undefined,
                      "letterSpacing": 0.15,
                      "lineHeight": undefined,
                      "minWidth": 65,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "textAlign": "left",
                      "textAlignVertical": "center",
                    },
                    undefined,
                    [
                      {},
                    ],
                    undefined,
                  ]
                }
                testID="text-input-flat"
                underlineColorAndroid="transparent"
                value="Doe"
              />
            </View>
          </View>
        </View>
        <View
          style={
            {
              "flexDirection": "column",
              "maxWidth": 650,
            }
          }
        >
          <RNGestureHandlerButton
            collapsable={false}
            delayLongPress={600}
            enabled={true}
            exclusive={true}
            handlerTag={2}
            handlerType="NativeViewGestureHandler"
            innerRef={null}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            rippleColor="transparent"
            style={
              [
                undefined,
                {
                  "cursor": undefined,
                },
              ]
            }
            touchSoundDisabled={false}
          >
            <View
              accessible={true}
              collapsable={false}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View>
                <View
                  style={
                    [
                      {
                        "backgroundColor": "rgba(231, 224, 236, 1)",
                        "borderTopLeftRadius": 2,
                        "borderTopRightRadius": 2,
                      },
                      {
                        "fontFamily": "calibre_app_regular",
                        "marginBottom": 16,
                        "width": 600,
                      },
                    ]
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": "#ffffff",
                        "bottom": 0,
                        "height": 1,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "transform": [
                          {
                            "scaleY": 0.5,
                          },
                        ],
                        "zIndex": 1,
                      }
                    }
                    testID="text-input-underline"
                  />
                  <View
                    onLayout={[Function]}
                    style={
                      [
                        {
                          "flexGrow": 1,
                          "paddingBottom": 0,
                          "paddingTop": 0,
                        },
                        {
                          "minHeight": 56,
                        },
                      ]
                    }
                  >
                    <View
                      pointerEvents="none"
                      style={
                        [
                          {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          },
                          {
                            "overflow": "hidden",
                          },
                          {
                            "zIndex": 3,
                          },
                        ]
                      }
                    >
                      <View
                        collapsable={false}
                        pointerEvents="none"
                        style={
                          {
                            "bottom": 0,
                            "left": 0,
                            "opacity": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "transform": [
                              {
                                "translateX": 0,
                              },
                            ],
                            "width": 750,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "width": 73,
                            }
                          }
                        >
                          <Text
                            collapsable={false}
                            maxFontSizeMultiplier={1.5}
                            numberOfLines={1}
                            onLayout={[Function]}
                            onTextLayout={[Function]}
                            style={
                              {
                                "color": "#00ffe6",
                                "fontFamily": "System",
                                "fontSize": 12,
                                "fontWeight": undefined,
                                "left": 0,
                                "letterSpacing": 0.15,
                                "lineHeight": undefined,
                                "maxWidth": 73,
                                "opacity": 0,
                                "paddingLeft": 16,
                                "paddingRight": 16,
                                "position": "absolute",
                                "textAlign": "left",
                                "top": 30,
                                "transform": [
                                  {
                                    "translateX": 0,
                                  },
                                  {
                                    "translateY": -12,
                                  },
                                  {
                                    "scale": 1,
                                  },
                                ],
                                "writingDirection": "ltr",
                              }
                            }
                            testID="text-input-flat-label-active"
                          >
                            誕生日
                          </Text>
                          <Text
                            collapsable={false}
                            maxFontSizeMultiplier={1.5}
                            numberOfLines={1}
                            style={
                              {
                                "color": "rgba(73, 69, 79, 1)",
                                "fontFamily": "System",
                                "fontSize": 12,
                                "fontWeight": undefined,
                                "left": 0,
                                "letterSpacing": 0.15,
                                "lineHeight": undefined,
                                "maxWidth": 73,
                                "opacity": 0,
                                "paddingLeft": 16,
                                "paddingRight": 16,
                                "position": "absolute",
                                "textAlign": "left",
                                "top": 30,
                                "transform": [
                                  {
                                    "translateX": 0,
                                  },
                                  {
                                    "translateY": -12,
                                  },
                                  {
                                    "scale": 1,
                                  },
                                ],
                                "writingDirection": "ltr",
                              }
                            }
                            testID="text-input-flat-label-inactive"
                          >
                            誕生日
                          </Text>
                        </View>
                      </View>
                    </View>
                    <TextInput
                      cursorColor="#00ffe6"
                      editable={false}
                      maxFontSizeMultiplier={1.5}
                      multiline={false}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      placeholderTextColor="transparent"
                      selectionColor="#ffffff"
                      style={
                        [
                          {
                            "flexGrow": 1,
                            "margin": 0,
                          },
                          {},
                          {
                            "paddingBottom": 4,
                            "paddingTop": 24,
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 12,
                            "fontWeight": undefined,
                            "letterSpacing": 0.15,
                            "lineHeight": undefined,
                            "minWidth": 65,
                            "paddingLeft": 16,
                            "paddingRight": 16,
                            "textAlign": "left",
                            "textAlignVertical": "center",
                          },
                          undefined,
                          [
                            {},
                          ],
                          undefined,
                        ]
                      }
                      testID="text-input-flat"
                      underlineColorAndroid="transparent"
                      value="2026年04月03日  "
                    />
                  </View>
                </View>
              </View>
            </View>
          </RNGestureHandlerButton>
          <View
            style={
              {
                "alignItems": "center",
                "marginLeft": undefined,
                "maxWidth": undefined,
                "width": undefined,
              }
            }
          >
            <View
              accessibilityRole="radiogroup"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "height": 40,
                      "justifyContent": "flex-start",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  accessibilityLiveRegion="polite"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": false,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  color="rgba(98, 91, 113, 1)"
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 18,
                        "padding": 6,
                      },
                    ]
                  }
                  uncheckedColor="rgba(98, 91, 113, 1)"
                >
                  <View
                    style={
                      {
                        "opacity": 0,
                      }
                    }
                  >
                    <Text
                      accessibilityElementsHidden={true}
                      allowFontScaling={false}
                      importantForAccessibility="no-hide-descendants"
                      pointerEvents="none"
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(98, 91, 113, 1)",
                            "fontSize": 24,
                          },
                          [
                            {
                              "lineHeight": 24,
                              "transform": [
                                {
                                  "scaleX": 1,
                                },
                              ],
                            },
                            {
                              "backgroundColor": "transparent",
                            },
                          ],
                          {
                            "fontFamily": "material-community",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      󰄬
                    </Text>
                  </View>
                </View>
                <Text
                  style={
                    [
                      {
                        "color": "rgba(28, 27, 31, 1)",
                      },
                      undefined,
                    ]
                  }
                >
                  男性
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "height": 40,
                      "justifyContent": "flex-start",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  accessibilityLiveRegion="polite"
                  accessibilityRole="radio"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": true,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  color="rgba(98, 91, 113, 1)"
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 18,
                        "padding": 6,
                      },
                    ]
                  }
                  uncheckedColor="rgba(98, 91, 113, 1)"
                >
                  <View
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityElementsHidden={true}
                      allowFontScaling={false}
                      importantForAccessibility="no-hide-descendants"
                      pointerEvents="none"
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(98, 91, 113, 1)",
                            "fontSize": 24,
                          },
                          [
                            {
                              "lineHeight": 24,
                              "transform": [
                                {
                                  "scaleX": 1,
                                },
                              ],
                            },
                            {
                              "backgroundColor": "transparent",
                            },
                          ],
                          {
                            "fontFamily": "material-community",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      󰄬
                    </Text>
                  </View>
                </View>
                <Text
                  style={
                    [
                      {
                        "color": "rgba(28, 27, 31, 1)",
                      },
                      undefined,
                    ]
                  }
                >
                  女性
                </Text>
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            [
              {
                "fontFamily": "calibre_app_regular",
                "fontSize": 13,
                "marginBottom": 18,
              },
              {
                "color": "#ff4310",
              },
              undefined,
            ]
          }
        />
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#00ffe6",
              "borderRadius": 16,
              "height": 50,
              "marginBottom": 16,
              "marginTop": 16,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
              "width": 270,
            }
          }
          testID="button-container-outer-layer"
        >
          <View
            collapsable={false}
            screenWidth={400}
            style={
              {
                "backgroundColor": "#00ffe6",
                "borderColor": "transparent",
                "borderRadius": 16,
                "borderStyle": "solid",
                "borderWidth": 0,
                "flex": 1,
                "minWidth": 64,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
            testID="button-container"
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "borderRadius": 16,
                  },
                ]
              }
              testID="button"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        [
                          {
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          false,
                          {
                            "marginHorizontal": 24,
                            "marginVertical": 10,
                          },
                          undefined,
                          false,
                          {
                            "color": "rgba(255, 255, 255, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "fontFamily": "calibre_app_semibold",
                              "fontSize": 24,
                            },
                            undefined,
                          ],
                        ],
                      ],
                    ]
                  }
                  testID="button-text"
                >
                  更新
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderRadius": 10,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="button-container-outer-layer"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "transparent",
                "borderColor": "transparent",
                "borderRadius": 10,
                "borderStyle": "solid",
                "borderWidth": 0,
                "flex": undefined,
                "minWidth": 64,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
            testID="button-container"
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "borderRadius": 10,
                  },
                ]
              }
              testID="button"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    [
                      {
                        "height": 28,
                        "marginBottom": 12,
                        "marginTop": 16,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        [
                          {
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          false,
                          {
                            "marginHorizontal": 12,
                          },
                          undefined,
                          false,
                          {
                            "color": "#00ffe6",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "fontFamily": "calibre_app_semibold",
                              "fontSize": 14,
                            },
                            {
                              "color": "rgba(28, 27, 31, 1)",
                            },
                            undefined,
                          ],
                        ],
                      ],
                    ]
                  }
                  testID="button-text"
                >
                  サインアウト
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
